# NetflowByUser

./: .gitignore  README.md  README_EN.md  check_sky_sectors.py  config.yaml  config_targetdb_cosmos.toml  create_pfs_env.py  download_data.sh  hexagons_cosmos_flat_centers.ecsv  hexagons_cosmos_pointy_centers.ecsv  hexagons_xmm_lss_flat_centers.ecsv  hexagons_xmm_lss_pointy_centers.ecsv  make_pfs_design.py  merge_target_csv.py  netflow_io.py  netflow_pipeline_config.yaml  netflow_solver.py  optimize_hex_fov.py  optimize_hex_fov_local_search.py  optimize_hex_fov_with_guidestars.py  pyproject.toml  run_netflow.py  targetdb_calib.py
docs/: index.md  optimize_hex_fov_with_guidestars.md  optimize_hex_fov_with_guidestars_EN.md  run_netflow.md  run_netflow_EN.md  slides_pfs_netflow.html  slides_pfs_netflow.md  slides_pfs_netflow_EN.html  slides_pfs_netflow_EN.md
fov_solvers_comparison/: README.md  compare_fov_solvers.py  optimize_hex_fov_local_search.py  optimize_hex_fov_milp.py
ope_templates/: template_latest.ope
src/netflow_by_user/: make_pfs_design.py  netflow_instrument.py  netflow_plot.py  netflow_solver.py  optimize_hex_fov_local_search.py  optimize_hex_fov_with_guidestars.py  query_gaia_public.py  run_netflow.py  targetdb_calib.py
